--- a/storybook/package.json
+++ b/storybook/package.json
@@ -12,10 +12,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.23.6",
+        "@babel/core": "^7.28.5",
         "@storybook/addon-actions": "^7.6.5",
         "@storybook/addon-controls": "^7.6.5",
         "@storybook/addon-essentials": "^7.6.5",
+        "@storybook/addon-interactions": "^7.6.5",
         "@storybook/addon-links": "^7.6.5",
         "@storybook/addon-mdx-gfm": "^7.6.5",
         "@storybook/addon-viewport": "^7.6.5",
@@ -25,20 +26,20 @@
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.1.7",
         "babel-loader": "^8.2.2",
-        "core-js": "^3.9.0",
+        "core-js": "^3.47.0",
         "css-loader": "^5.0.2",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
-        "less": "^4.1.0",
-        "less-loader": "^12.1.0",
+        "less": "^4.5.1",
+        "less-loader": "^12.3.0",
         "react-docgen-typescript": "^1.21.0",
         "react-icons": "^4.2.0",
         "react-is": "^16.13.1",
         "storybook": "^7.6.5",
         "style-loader": "^2.0.0",
         "ts-loader": "^8.0.17",
-        "tsconfig-paths-webpack-plugin": "^4.1.0",
+        "tsconfig-paths-webpack-plugin": "^4.2.0",
         "typescript": "^4.1.5",
-        "webpack": "^5.89.0"
+        "webpack": "^5.104.1"
     },
     "dependencies": {
         "@ferlab/ui": "file:../packages/ui",
